# trabalhoPG

./: README-P2(PROVA).md  README.md
P2-Prova/: cubo.html  initShader.js  move.js  texturecube.js
PP2/: CMakeLists.txt
PP2/src/Codigo/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cc  ray.h  rtweekend.h  vec3.h
